fixed profile.html bug

--- a/front_end/add_activity.html
+++ b/front_end/add_activity.html
@@ -138,39 +138,52 @@
         // FIXED FORM SUBMISSION
         // FIXED FORM SUBMISSION
 // FIXED FORM SUBMISSION - matches your models.py exactly
+// FIXED FORM SUBMISSION - maps to short codes
 document.getElementById('addActivityForm').addEventListener('submit', async (e) => {
     e.preventDefault();
     const messageEl = document.getElementById('form-message');
     messageEl.textContent = 'Saving workout...';
     messageEl.className = 'mt-3 text-center text-primary fw-bold';
 
-    const activityType = document.getElementById('activity_type').value.trim();
+    const fullType = document.getElementById('activity_type').value.trim();
     const duration = parseInt(document.getElementById('duration').value);
     const distanceKm = parseFloat(document.getElementById('distance_km').value) || 0;
     const date = document.getElementById('date').value;
     const notes = document.getElementById('notes').value.trim() || '';
 
-    if (!activityType || isNaN(duration) || duration <= 0 || !date) {
+    if (!fullType || isNaN(duration) || duration <= 0 || !date) {
         messageEl.textContent = 'Please fill all required fields correctly.';
         messageEl.className = 'mt-3 text-center text-danger fw-bold';
         return;
     }
 
-    // Estimate calories (optional but good UX)
-    let calRate = 8; // default
-    const lowerType = activityType.toLowerCase();
+    // Map full name to short code
+    const typeMap = {
+        'Running': 'RUN',
+        'Cycling': 'CYC',
+        'Weightlifting': 'GYM',
+        'Yoga': 'YOG',
+        'Swimming': 'SWM',
+        'Walking': 'OTH',
+        'Other': 'OTH'
+    };
+    const activityType = typeMap[fullType] || 'OTH';
+
+    // Estimate calories
+    let calRate = 8;
+    const lowerType = fullType.toLowerCase();
     if (lowerType.includes('run') || lowerType.includes('swim')) calRate = 12;
     if (lowerType.includes('cycle')) calRate = 10;
     if (lowerType.includes('weight') || lowerType.includes('lift')) calRate = 6;
     if (lowerType.includes('yoga')) calRate = 4;
 
     const data = {
-        activity_type: activityType,
-        duration: duration,                  // Exact match to model
+        activity_type: activityType,          // Short code for backend
+        duration: duration,
         distance_km: distanceKm,
         date: date,
         notes: notes,
-        calories_burned: Math.round(duration * calRate)  // Estimated
+        calories_burned: Math.round(duration * calRate)
     };
 
     try {
@@ -184,7 +197,7 @@ document.getElementById('addActivityForm').addEventListener('submit', async (e) 
 
     } catch (err) {
         console.error('Save failed:', err);
-        messageEl.textContent = `Failed to save: ${err.message || 'Invalid data'}`;
+        messageEl.textContent = `Failed: ${err.message || 'Check fields and try again'}`;
         messageEl.className = 'mt-3 text-center text-danger fw-bold';
     }
 });
